--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="uk.org.mattford.scoutlink.MainActivity" >
+    tools:context="uk.org.mattford.scoutlink.activity.MainActivity" >
 
     <ImageView
         android:id="@+id/sl_logo"
