--- a/res/layout/message_list_view.xml
+++ b/res/layout/message_list_view.xml
@@ -5,12 +5,12 @@
 
      <ListView android:id="@id/android:list"
                android:layout_width="match_parent"
-               android:layout_height="match_parent"
+               android:layout_height="0dp"
                android:layout_weight="1"
                android:drawSelectorOnTop="false"/>
 
      <TextView android:id="@id/android:empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
-               android:text="No messages yet."/>
+               android:text="@string/message_list_no_messages"/>
  </LinearLayout>
