--- a/app/src/main/res/layout/message_list_view.xml
+++ b/app/src/main/res/layout/message_list_view.xml
@@ -1,7 +1,9 @@
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
-         android:layout_height="match_parent">
+         android:layout_height="match_parent"
+         android:paddingLeft="2dp"
+         android:paddingRight="2dp">
 
      <ListView android:id="@id/android:list"
                android:layout_width="match_parent"
