--- a/app/src/main/res/drawable/rounded_corners.xml
+++ b/app/src/main/res/drawable/rounded_corners.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
 
     <stroke
-        android:width="1dp"
-        android:color="#000000" />
+        android:width="0dp"
+        android:color="#ffffff" />
 
     <solid android:color="#ffd8d8d8" />
 
@@ -12,6 +12,6 @@
         android:right="3dp"
         android:top="3dp" />
 
-    <corners android:radius="5dp" />
+    <corners android:radius="10dp" />
 
 </shape>
