--- a/app/src/main/res/layout/message_list_item_no_sender.xml
+++ b/app/src/main/res/layout/message_list_item_no_sender.xml
@@ -3,13 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
-    android:orientation="vertical">
-    <TextView
-        android:id="@+id/sender"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        >
-    </TextView>
+    android:orientation="vertical"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp">
 
     <TextView
         android:id="@+id/message"
