--- a/app/src/main/res/layout/message_list_item.xml
+++ b/app/src/main/res/layout/message_list_item.xml
@@ -13,11 +13,19 @@
 
     <TextView
         android:id="@+id/message"
+        android:minWidth="150dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:background="@drawable/rounded_corners"
         android:padding="10dp"
         >
-
     </TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/timestamp"
+        android:visibility="gone"
+        android:layout_gravity="center_horizontal"
+        />
 </LinearLayout>
