--- a/app/src/main/res/layout/channel_list_item.xml
+++ b/app/src/main/res/layout/channel_list_item.xml
@@ -2,7 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/channel">
+    android:id="@+id/channel"
+    android:padding="10dp"
+    >
 
 
 </TextView>
