--- a/app/src/main/res/layout/activity_list_view_edit.xml
+++ b/app/src/main/res/layout/activity_list_view_edit.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="uk.org.mattford.scoutlink.activity.ListViewEditActivity">
+    tools:context="uk.org.mattford.scoutlink.activity.ListEditActivity">
 
     <ListView
         android:layout_width="match_parent"
