--- a/app/src/main/res/layout/message_list_item.xml
+++ b/app/src/main/res/layout/message_list_item.xml
@@ -13,7 +13,6 @@
 
     <TextView
         android:id="@+id/message"
-        android:minWidth="50dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:background="@drawable/rounded_corners"
@@ -27,5 +26,5 @@
         android:id="@+id/timestamp"
         android:visibility="gone"
         android:layout_gravity="center_horizontal"
-        />
+        ></TextView>
 </LinearLayout>
