Fixed many Android Lint errors, started adding comments to strings.xml

--- a/app/src/main/res/layout/activity_channel_settings.xml
+++ b/app/src/main/res/layout/activity_channel_settings.xml
@@ -18,6 +18,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/settings_topic"
             android:layout_weight="1"
+            android:inputType="text"
+            android:hint="@string/settings_topic_hint"
 
             />
         <Button
