--- a/app/src/main/res/layout/activity_list_view_edit.xml
+++ b/app/src/main/res/layout/activity_list_view_edit.xml
@@ -28,13 +28,14 @@
         android:layout_height="match_parent"
         android:id="@+id/new_item"
         android:layout_weight="1"
+        android:inputType="text"
         >
 
         </EditText>
     <Button
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
-        android:text="Add"
+        android:text="@string/edit_list_add_button"
         android:onClick="onNewItemButtonClick"
         ></Button>
 
@@ -43,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/finish_button"
-        android:text="Save"
+        android:text="@string/edit_list_save_button"
         android:layout_below="@id/new_item_controls"
         android:onClick="onFinishClick"
         />
