--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -9,6 +9,8 @@
         android:id="@+id/message"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="@string/notice_hint"
     />
     <Button
         android:id="@+id/send_button"
