--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,41 +3,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="0px"
+    android:paddingRight="0px"
+    android:paddingTop="0px"
     tools:context="uk.org.mattford.scoutlink.activity.MainActivity" >
 
     <ImageView
-        android:id="@+id/sl_logo"
+        android:id="@+id/sl_header"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/scoutlink"/>
-    <TextView
-        android:id="@+id/welcome_text"
-        android:layout_width="fill_parent"
+        android:src="@drawable/header"
+        android:contentDescription="@string/sl_header_content_description"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/sl_logo"
-        android:text="@string/welcome_text"/>
-    <EditText
-        android:id="@+id/nickname"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/welcome_text"
-        android:ems="10"
-        android:hint="@string/nickname_hint" >
+        android:orientation="vertical"
+        android:layout_below="@id/sl_header"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        >
+        <TextView
+            android:id="@+id/welcome_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/welcome_text"/>
+        <EditText
+            android:id="@+id/nickname"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/nickname_hint" >
 
-        <requestFocus />
-    </EditText>
-    <Button
-        android:id="@+id/connect_button"
-        android:text="@string/connect_button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/nickname"
-        android:onClick="connectClick"
-        />
+            <requestFocus />
+        </EditText>
+        <Button
+            android:id="@+id/connect_button"
+            android:text="@string/connect_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="connectClick"
+            />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
