Configured AppCompat styles to improve cross-device compatibility Fixed display of notice and actions

--- a/app/src/main/res/menu/userlist_context_menu_ircop.xml
+++ b/app/src/main/res/menu/userlist_context_menu_ircop.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 <item android:id="@+id/action_userlist_kill"
-    android:title="@string/action_userlist_kill_label" android:showAsAction="always"/>
+    android:title="@string/action_userlist_kill_label" app:showAsAction="always"/>
 </menu>
