--- a/app/src/main/res/menu/userlist_context_menu.xml
+++ b/app/src/main/res/menu/userlist_context_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_userlist_query" android:title="@string/action_userlist_query_label"
-        android:orderInCategory="100" android:showAsAction="never" />
+        android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_userlist_notice" android:title="@string/action_userlist_notice_label"
-        android:orderInCategory="100" android:showAsAction="never" />
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
