Improved Whois Implemented Notify List

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/nickname_hint" >
+            android:hint="@string/nickname_hint"
+            android:maxLines="1"
+            android:singleLine="true">
 
             <requestFocus />
         </EditText>
