--- a/app/src/main/res/layout/activity_channel_settings.xml
+++ b/app/src/main/res/layout/activity_channel_settings.xml
@@ -1,12 +1,17 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="uk.org.mattford.scoutlink.activity.ChannelSettingsActivity"
     android:orientation="vertical">
-
 
 
     <LinearLayout
@@ -84,12 +89,12 @@
         android:id="@+id/channel_limit_set"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="@string/channel_limit_set"></Button>
+        android:text="@string/channel_limit_set"/>
     <Button
         android:id="@+id/channel_limit_remove"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="@string/channel_limit_remove"></Button>
+        android:text="@string/channel_limit_remove"/>
 
 </LinearLayout>
     <LinearLayout
@@ -108,13 +113,14 @@
             android:id="@+id/channel_key_set"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/channel_key_set"></Button>
+            android:text="@string/channel_key_set"/>
         <Button
             android:id="@+id/channel_key_remove"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/channel_key_remove"></Button>
+            android:text="@string/channel_key_remove"/>
 
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
