Refactored ChannelListActivity to refresh channels when opened Added option to show channel list on connect

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,10 +50,12 @@
                     android:onClick="connectClick"
                     />
             </LinearLayout>
+            <CheckBox
+                android:id="@+id/channel_list_on_connect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/channel_list_on_connect"/>
         </LinearLayout>
-
-
-
 
     </RelativeLayout>
 
