--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+<string-array name="prefixes">
+    <item>~</item>
+    <item>&amp;</item>
+    <item>\@</item>
+    <item>&#x0025;</item>
+    <item>+</item>
+</string-array>
 
 
 </resources>
