Links in messages are now clickable

--- a/app/src/main/res/layout/message_list_item.xml
+++ b/app/src/main/res/layout/message_list_item.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:background="@drawable/rounded_corners"
         android:padding="10dp"
+        android:autoLink="web"
         >
     </TextView>
 
