--- a/app/src/main/res/layout/message_list_item_no_sender.xml
+++ b/app/src/main/res/layout/message_list_item_no_sender.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:background="@drawable/rounded_corners"
         android:padding="10dp"
+        android:autoLink="web"
         >
 
     </TextView>
