--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,5 +6,10 @@
         android:orderInCategory="100"
         app:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_rules"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="@string/action_rules"/>
 
 </menu>
