--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         <ImageView
             android:id="@+id/sl_header"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/header"
@@ -18,6 +18,7 @@
             android:background="@drawable/slightly_rounded_corners"
             android:layout_alignParentBottom="true"
             android:orientation="vertical"
+
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
@@ -26,7 +27,7 @@
                 android:id="@+id/welcome_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:textColor="@color/white"
                 android:text="@string/welcome_text"/>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -37,7 +38,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:textColor="@color/white"
                     android:hint="@string/nickname_hint"
+                    android:textColorHint="@color/white"
                     android:maxLines="1"
                     android:singleLine="true">
                     <requestFocus />
@@ -47,6 +50,8 @@
                     android:text="@string/connect_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/sl_button"
+                    android:textColor="@color/white"
                     android:onClick="connectClick"
                     />
             </LinearLayout>
@@ -54,6 +59,8 @@
                 android:id="@+id/channel_list_on_connect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:buttonTint="@color/white"
                 android:text="@string/channel_list_on_connect"/>
         </LinearLayout>
 
