--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="scoutlink_blue">#0F1B5F</color>
+    <color name="scoutlink_blue">#1D1756</color>
     <color name="scoutlink_blue_dark">#FF0E1344</color>
-    <color name="scoutlink_orange">#FFB200</color>
+    <color name="scoutlink_orange">#ECAC00</color>
     <color name="white">#FFFFFF</color>
     <color name="light_green">#4CD964</color>
 </resources>
