--- a/app/src/main/res/layout/message_list_view.xml
+++ b/app/src/main/res/layout/message_list_view.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/message_list_no_messages"/>
-        </LinearLayout>
+    </LinearLayout>
 
      <ImageView
          android:id="@+id/not_at_bottom"
@@ -28,5 +28,5 @@
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:visibility="gone"
-         android:src="@drawable/downarrow"/>
+         android:src="@drawable/ic_arrow_downward"/>
  </RelativeLayout>
