--- a/app/src/main/res/layout/activity_log_list.xml
+++ b/app/src/main/res/layout/activity_log_list.xml
@@ -10,5 +10,9 @@
         android:layout_height="fill_parent">
 
         </ListView>
+    <TextView android:id="@id/android:empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/no_logs_to_view" />
 
 </RelativeLayout>
