Make empty view work properly

--- a/app/src/main/res/layout/activity_log_list.xml
+++ b/app/src/main/res/layout/activity_log_list.xml
@@ -13,6 +13,7 @@
     <TextView android:id="@id/android:empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:text="@string/no_logs_to_view" />
 
 </RelativeLayout>
