Start of design rework

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,4 +5,5 @@
     <color name="scoutlink_orange">#ECAC00</color>
     <color name="white">#FFFFFF</color>
     <color name="light_green">#4CD964</color>
+    <color name="light_grey">#A9A9A9</color>
 </resources>
