--- a/app/src/main/res/layout/message_list_item.xml
+++ b/app/src/main/res/layout/message_list_item.xml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
     android:orientation="vertical">
-    <TextView
-        android:id="@+id/sender"
+
+    <LinearLayout
+        android:id="@+id/message_metadata"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        >
-    </TextView>
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/sender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start" />
+
+        <TextView
+            android:id="@+id/timestamp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:gravity="end"
+            android:textColor="@color/light_grey" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/message"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:background="@drawable/rounded_corners"
-        android:padding="10dp"
+        android:layout_height="wrap_content"
         android:autoLink="web"
-        >
-    </TextView>
+        android:padding="10dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/timestamp"
-        android:visibility="gone"
-        android:layout_gravity="center_horizontal"
-        ></TextView>
+
 </LinearLayout>
