* Implement unread messages count * Implement connection status * Start work to remove UserListActivity * Start moving join channel button to sidebar

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -6,6 +6,7 @@
     android:clickable="true"
     android:theme="@style/DarkDrawer"
     android:focusable="true"
+    android:padding="16dp"
     android:background="?android:attr/selectableItemBackground">
 
     <TextView
@@ -13,6 +14,11 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
+
+    <TextView
+        android:id="@+id/role_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 </LinearLayout>
