Add unread messages count and finish rework of messages view

--- a/app/src/main/res/drawable/rounded_corners.xml
+++ b/app/src/main/res/drawable/rounded_corners.xml
@@ -5,7 +5,7 @@
         android:width="0dp"
         android:color="#ffffff" />
 
-    <solid android:color="#ffd8d8d8" />
+    <solid android:color="#ffffff" />
 
     <padding
         android:left="3dp"
