--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -6,4 +6,6 @@
     <color name="white">#FFFFFF</color>
     <color name="light_green">#4CD964</color>
     <color name="light_grey">#A9A9A9</color>
+    <color name="conversation_background">#EBEBEB</color>
+    <color name="red">#FF0000</color>
 </resources>
